--- a/index.html
+++ b/index.html
@@ -7,6 +7,68 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+		<div id="home" class="app--container">
+			<header class="header">
+				<img
+					class="header--image"
+					src="./img/descarga.jpg"
+					alt="logo" />
+				<nav class="header--navigation">
+					<li class="header--navigation--li">
+						<a class="header--navigation--li--a" href="#home"
+							>Home</a
+						>
+					</li>
+					<li class="header--navigation--li">
+						<a class="header--navigation--li--a" href="#aboutUs"
+							>Sobre Nosotros</a
+						>
+					</li>
+					<li class="header--navigation--li">
+						<a class="header--navigation--li--a" href="#services"
+							>Servicios</a
+						>
+					</li>
+					<li class="header--navigation--li">
+						<a class="header--navigation--li--a" href="#contact"
+							>Contacto</a
+						>
+					</li>
+				</nav>
+			</header>
+			<header class="header--mobile">
+				<div class="header--mobile--close">X</div>
+				<img
+					class="header--mobile--image"
+					src="./img/descarga.jpg"
+					alt="logo" />
+				<nav class="header--mobile--nav">
+					<li class="header--navigation--li">
+						<a class="header--navigation--li--a" href="#home"
+							>Home</a
+						>
+					</li>
+					<li class="header--navigation--li">
+						<a class="header--navigation--li--a" href="#aboutUs"
+							>Sobre Nosotros</a
+						>
+					</li>
+					<li class="header--navigation--li">
+						<a class="header--navigation--li--a" href="#services"
+							>Servicios</a
+						>
+					</li>
+					<li class="header--navigation--li">
+						<a class="header--navigation--li--a" href="#contact"
+							>Contacto</a
+						>
+					</li>
+				</nav>
+			</header>
+
+			<div>HOLA</div>
+		</div>
+
 		<script src="script.js"></script>
 	</body>
 </html>
