--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
 				</nav>
 			</header>
 
-			<div>HOLA</div>
+			<section class="app--section"></section>
+			<section class="app--section">
+				<h3 id="titulo">TITULO</h3>
+			</section>
+			<section class="app--section"></section>
 		</div>
 
 		<script src="script.js"></script>
