--- a/index.html
+++ b/index.html
@@ -98,16 +98,108 @@
 			<!-- END HERO -->
 
 			<!-- MISION -->
-			<section class="app--mision">
-				<h2 class="app--mision--title">
-					<div class="app--mision--title--bg"></div>
-					<span class="app--mision--title--span">M</span>isión
+			<section class="mision--section">
+				<h2 class="mision--section--title">
+					<div class="mision--section--title--bg"></div>
+					<span class="mision--section--title--span">M</span>isión
 				</h2>
-				<p class="app--mision--text"></p>
+				<p class="mision--section--text">
+					Entendemos los desafíos que enfrentas en la necesidad de
+					sumar capacitaciones pudiendo manejar horarios y tiempos,
+					pero no te preocupes, estamos aquí para ayudarte. Nuestro
+					enfoque se basa bajo la modalidad online donde vas a
+					encontrar una manera practica y sencilla de completar las
+					capacitaciones para la recepción de las certificaciones
+					correspondientes.
+				</p>
 			</section>
 			<!-- END MISION -->
 
-			<section class="app--section"></section>
+			<section class="services--section">
+				<h2 class="services--section--title">
+					<div class="services--section--title--bg"></div>
+					<span class="services--section--title--span">S</span
+					>ervicios
+				</h2>
+				<div class="services--section--container">
+					<div class="services--section--card">
+						<div class="services--section--card--title">Title</div>
+						<img
+							data-src="./img/cursos/1.jpeg"
+							class="services--section--card--image lazy"
+							src=""
+							alt="image" />
+						<p class="services--section--card--text">
+							Lorem ipsum dolor sit amet consectetur adipisicing
+							elit. Quisquam, voluptatum.
+						</p>
+						<button class="services--section--card--button">
+							Button
+						</button>
+					</div>
+					<div class="services--section--card">
+						<div class="services--section--card--title">Title</div>
+						<img
+							data-src="./img/cursos/1.jpeg"
+							class="services--section--card--image lazy"
+							src=""
+							alt="image" />
+						<p class="services--section--card--text">
+							Lorem ipsum dolor sit amet consectetur adipisicing
+							elit. Quisquam, voluptatum.
+						</p>
+						<button class="services--section--card--button">
+							Button
+						</button>
+					</div>
+					<div class="services--section--card">
+						<div class="services--section--card--title">Title</div>
+						<img
+							data-src="./img/cursos/1.jpeg"
+							class="services--section--card--image lazy"
+							src=""
+							alt="image" />
+						<p class="services--section--card--text">
+							Lorem ipsum dolor sit amet consectetur adipisicing
+							elit. Quisquam, voluptatum.
+						</p>
+						<button class="services--section--card--button">
+							Button
+						</button>
+					</div>
+					<div class="services--section--card">
+						<div class="services--section--card--title">Title</div>
+						<img
+							data-src="./img/cursos/1.jpeg"
+							class="services--section--card--image lazy"
+							src=""
+							alt="image" />
+						<p class="services--section--card--text">
+							Lorem ipsum dolor sit amet consectetur adipisicing
+							elit. Quisquam, voluptatum.
+						</p>
+						<button class="services--section--card--button">
+							Button
+						</button>
+					</div>
+					<div class="services--section--card">
+						<div class="services--section--card--title">Title</div>
+						<img
+							data-src="./img/cursos/1.jpeg"
+							class="services--section--card--image lazy"
+							src=""
+							alt="image" />
+						<p class="services--section--card--text">
+							Lorem ipsum dolor sit amet consectetur adipisicing
+							elit. Quisquam, voluptatum.
+						</p>
+						<button class="services--section--card--button">
+							Button
+						</button>
+					</div>
+				</div>
+			</section>
+
 			<section class="app--section">
 				<h3 id="titulo">TITULO</h3>
 			</section>
