footer, fix styles

--- a/index.html
+++ b/index.html
@@ -204,6 +204,16 @@
 				<h3 id="titulo">TITULO</h3>
 			</section>
 			<section class="app--section"></section>
+			<footer id="contact" class="app--footer">
+				<div class="app--footer--info--container">
+					<div>+542911111111</div>
+					<div>+5429155222333</div>
+				</div>
+				<div class="app--footer--info--container">
+					<div>email@email.com</div>
+					<div>email@email.com2</div>
+				</div>
+			</footer>
 		</div>
 
 		<script src="script.js" type="module"></script>
