--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div id="home" class="app--container">
 			<!-- DESKTOP -->
 			<header class="header">
-				<img class="header--image" src="./img/logo.jpg" alt="gea" />
+				<img class="header--image" src="./img/gea/logo.jpg" alt="gea" />
 				<nav class="header--navigation">
 					<a class="header--navigation--li" href="#us">
 						<span
@@ -38,7 +38,7 @@
 				<nav class="header--mobile--nav">
 					<img
 						class="header--mobile--nav--image"
-						src="./img/logo.jpg"
+						src="./img/gea/logo.jpg"
 						alt="logo" />
 					<div class="header--mobile--nav--close" data-menu="11">
 						<div class="header--mobile--nav--close--left"></div>
@@ -93,7 +93,7 @@
 						>
 					</div>
 				</div>
-				<img class="hero--section--image" src="./img/hero.png" />
+				<img class="hero--section--image" src="./img/assets/hero.png" />
 			</section>
 			<!-- END HERO -->
 
@@ -121,81 +121,98 @@
 					<span class="services--section--title--span">S</span
 					>ervicios
 				</h2>
+				Diplomaturas
+				<div class="services--section--container">
+					<!-- <div class="services--section--card">
+						<img
+							data-src="./img/cursos/diplomaturas/1.jpeg"
+							class="services--section--card--image lazy"
+							src=""
+							alt="image" />
+					</div> -->
+					<div class="services--section--card">
+						<img
+							data-src="./img/cursos/diplomaturas/2.jpeg"
+							class="services--section--card--image lazy"
+							src=""
+							alt="image" />
+					</div>
+					<div class="services--section--card">
+						<img
+							data-src="./img/cursos/diplomaturas/3.jpeg"
+							class="services--section--card--image lazy"
+							src=""
+							alt="image" />
+					</div>
+					<div class="services--section--card">
+						<img
+							data-src="./img/cursos/diplomaturas/4.jpeg"
+							class="services--section--card--image lazy"
+							src=""
+							alt="image" />
+					</div>
+					<div class="services--section--card">
+						<img
+							data-src="./img/cursos/diplomaturas/5.jpeg"
+							class="services--section--card--image lazy"
+							src=""
+							alt="image" />
+					</div>
+					<div class="services--section--card">
+						<img
+							data-src="./img/cursos/diplomaturas/6.jpeg"
+							class="services--section--card--image lazy"
+							src=""
+							alt="image" />
+					</div>
+				</div>
+				Actualizaciones
 				<div class="services--section--container">
 					<div class="services--section--card">
-						<div class="services--section--card--title">Title</div>
 						<img
-							data-src="./img/cursos/1.jpeg"
+							data-src="./img/cursos/actualizaciones/1.jpeg"
 							class="services--section--card--image lazy"
 							src=""
 							alt="image" />
-						<p class="services--section--card--text">
-							Lorem ipsum dolor sit amet consectetur adipisicing
-							elit. Quisquam, voluptatum.
-						</p>
-						<button class="services--section--card--button">
-							Button
-						</button>
 					</div>
 					<div class="services--section--card">
-						<div class="services--section--card--title">Title</div>
 						<img
-							data-src="./img/cursos/1.jpeg"
+							data-src="./img/cursos/actualizaciones/2.jpeg"
 							class="services--section--card--image lazy"
 							src=""
 							alt="image" />
-						<p class="services--section--card--text">
-							Lorem ipsum dolor sit amet consectetur adipisicing
-							elit. Quisquam, voluptatum.
-						</p>
-						<button class="services--section--card--button">
-							Button
-						</button>
 					</div>
 					<div class="services--section--card">
-						<div class="services--section--card--title">Title</div>
 						<img
-							data-src="./img/cursos/1.jpeg"
+							data-src="./img/cursos/actualizaciones/3.jpeg"
 							class="services--section--card--image lazy"
 							src=""
 							alt="image" />
-						<p class="services--section--card--text">
-							Lorem ipsum dolor sit amet consectetur adipisicing
-							elit. Quisquam, voluptatum.
-						</p>
-						<button class="services--section--card--button">
-							Button
-						</button>
+					</div>
+				</div>
+
+				Especializaciones
+				<div class="services--section--container">
+					<div class="services--section--card">
+						<img
+							data-src="./img/cursos/especializaciones/2.jpeg"
+							class="services--section--card--image lazy"
+							src=""
+							alt="image" />
 					</div>
 					<div class="services--section--card">
-						<div class="services--section--card--title">Title</div>
 						<img
-							data-src="./img/cursos/1.jpeg"
+							data-src="./img/cursos/especializaciones/3.jpeg"
 							class="services--section--card--image lazy"
 							src=""
 							alt="image" />
-						<p class="services--section--card--text">
-							Lorem ipsum dolor sit amet consectetur adipisicing
-							elit. Quisquam, voluptatum.
-						</p>
-						<button class="services--section--card--button">
-							Button
-						</button>
 					</div>
 					<div class="services--section--card">
-						<div class="services--section--card--title">Title</div>
 						<img
-							data-src="./img/cursos/1.jpeg"
+							data-src="./img/cursos/especializaciones/4.jpeg"
 							class="services--section--card--image lazy"
 							src=""
 							alt="image" />
-						<p class="services--section--card--text">
-							Lorem ipsum dolor sit amet consectetur adipisicing
-							elit. Quisquam, voluptatum.
-						</p>
-						<button class="services--section--card--button">
-							Button
-						</button>
 					</div>
 				</div>
 			</section>
