--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<!-- HERO -->
 			<section class="hero--section">
 				<div class="hero--section--info">
-					<h1 class="hero--section--info--title">G.E.A</h1>
+					<h2 class="hero--section--info--title">G.E.A</h2>
 					<p class="hero--section--info--text">
 						Somos una empresa dedicada a la
 						<span class="hero--section--info--text--span">
@@ -93,7 +93,7 @@
 						>
 					</div>
 				</div>
-				<img class="hero--section--image" src="./img/assets/hero.png" />
+				<img class="hero--section--image" src="./img/gea/1.png" />
 			</section>
 			<!-- END HERO -->
 
@@ -116,12 +116,12 @@
 			<!-- END MISION -->
 
 			<section class="services--section">
-				<h2 class="services--section--title">
+				<h1 class="services--section--title">
 					<div class="services--section--title--bg"></div>
-					<span class="services--section--title--span">S</span
-					>ervicios
-				</h2>
-				Diplomaturas
+					<span class="services--section--title--span">C</span
+					>apacitaciones para docentes
+				</h1>
+				DIPLOMATURAS
 				<div class="services--section--container">
 					<!-- <div class="services--section--card">
 						<img
@@ -166,7 +166,7 @@
 							alt="image" />
 					</div>
 				</div>
-				Actualizaciones
+				ACTUALIZACIÓNES ACADÉMICAS
 				<div class="services--section--container">
 					<div class="services--section--card">
 						<img
@@ -191,7 +191,7 @@
 					</div>
 				</div>
 
-				Especializaciones
+				ESPECIALIZACIONES DOCENTES DE NIVEL SUPERIOR
 				<div class="services--section--container">
 					<div class="services--section--card">
 						<img
