delete hero logo

--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 		<div id="home" class="app--container">
 			<!-- DESKTOP -->
 			<header class="header">
-				<img
-					class="header--image lazyLogo"
-					src="./img/gea/logo.jpg"
-					alt="gea" />
+				<img class="header--image" src="./img/gea/logo.jpg" alt="gea" />
 				<nav class="header--navigation">
 					<a class="header--navigation--li" href="#us">
 						<span
@@ -79,11 +76,11 @@
 			<section class="hero--section">
 				<div class="hero--section--info">
 					<!-- <h2 class="hero--section--info--title">G.E.A</h2> -->
-					<img
+					<!-- <img
 						id="logo"
 						class="hero--section--logo"
 						src="./img/gea/logo.jpg"
-						alt="gea" />
+						alt="gea" /> -->
 
 					<p class="hero--section--info--text">
 						Somos una empresa dedicada a la
@@ -161,6 +158,9 @@
 				<h2 class="services--section--subtitle">DIPLOMATURAS</h2>
 				<div class="services--section--container">
 					<div class="services--section--card">
+						<h3 class="services--section--card--title">
+							Diplomatura en Alfabetización Digital
+						</h3>
 						<img
 							data-src="./img/cursos/diplomaturas/2.jpeg"
 							class="services--section--card--image lazy"
@@ -168,6 +168,9 @@
 							alt="image" />
 					</div>
 					<div class="services--section--card">
+						<h3 class="services--section--card--title">
+							Diplomatura en Comunicación Institucional
+						</h3>
 						<img
 							data-src="./img/cursos/diplomaturas/5.jpeg"
 							class="services--section--card--image lazy"
@@ -175,6 +178,9 @@
 							alt="image" />
 					</div>
 					<div class="services--section--card">
+						<h3 class="services--section--card--title">
+							Diplomatura en Dirección de Instituciones Educativas
+						</h3>
 						<img
 							data-src="./img/cursos/diplomaturas/4.jpeg"
 							class="services--section--card--image lazy"
@@ -182,6 +188,9 @@
 							alt="image" />
 					</div>
 					<div class="services--section--card">
+						<h3 class="services--section--card--title">
+							Diplomatura en Evaluación Educativa
+						</h3>
 						<img
 							data-src="./img/cursos/diplomaturas/3.jpeg"
 							class="services--section--card--image lazy"
@@ -189,6 +198,10 @@
 							alt="image" />
 					</div>
 					<div class="services--section--card">
+						<h3 class="services--section--card--title">
+							Diplomatura en Problemas Actuales de la Gestión
+							Institucional
+						</h3>
 						<img
 							data-src="./img/cursos/diplomaturas/6.jpeg"
 							class="services--section--card--image lazy"
@@ -196,6 +209,9 @@
 							alt="image" />
 					</div>
 					<div class="services--section--card--special">
+						<h3 class="services--section--card--title">
+							Diplomatura en Educación y Medios
+						</h3>
 						<img
 							data-src="./img/cursos/diplomaturas/1.jpeg"
 							class="services--section--card--image--special lazy"
@@ -209,6 +225,10 @@
 				</h2>
 				<div class="services--section--container">
 					<div class="services--section--card">
+						<h3 class="services--section--card--title">
+							Actualización Selección y evaluación de software
+							educativo
+						</h3>
 						<img
 							data-src="./img/cursos/actualizaciones/1.jpeg"
 							class="services--section--card--image lazy"
@@ -216,6 +236,9 @@
 							alt="image" />
 					</div>
 					<div class="services--section--card">
+						<h3 class="services--section--card--title">
+							Evaluación Diagnóstica para aprendizaje sustentable
+						</h3>
 						<img
 							data-src="./img/cursos/actualizaciones/2.jpeg"
 							class="services--section--card--image lazy"
@@ -223,6 +246,10 @@
 							alt="image" />
 					</div>
 					<div class="services--section--card">
+						<h3 class="services--section--card--title">
+							Actualización Académica en Ecosistemas Digitales en
+							la escuela
+						</h3>
 						<img
 							data-src="./img/cursos/actualizaciones/3.jpeg"
 							class="services--section--card--image lazy"
@@ -236,6 +263,10 @@
 				</h2>
 				<div class="services--section--container">
 					<div class="services--section--card">
+						<h3 class="services--section--card--title">
+							Especialización Docente de Nivel Superior en
+							Educación Permanente de Jóvenes y Adultos
+						</h3>
 						<img
 							data-src="./img/cursos/especializaciones/4.jpeg"
 							class="services--section--card--image lazy"
@@ -243,6 +274,10 @@
 							alt="image" />
 					</div>
 					<div class="services--section--card">
+						<h3 class="services--section--card--title">
+							Especialización Docente de Nivel Superior en Jardín
+							maternal
+						</h3>
 						<img
 							data-src="./img/cursos/especializaciones/3.jpeg"
 							class="services--section--card--image lazy"
@@ -250,6 +285,10 @@
 							alt="image" />
 					</div>
 					<div class="services--section--card">
+						<h3 class="services--section--card--title">
+							Especialización Docente de Nivel Superior en
+							Educación en Contextos de encierro
+						</h3>
 						<img
 							data-src="./img/cursos/especializaciones/2.jpeg"
 							class="services--section--card--image lazy"
