header logo mobile

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<header class="header--mobile">
 				<nav class="header--mobile--nav">
 					<img
-						class="header--mobile--nav--image lazyLogo"
+						class="header--mobile--nav--image"
 						src="./img/gea/logo.jpg"
 						alt="logo" />
 					<div class="header--mobile--nav--close" data-menu="11">
