--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 			<header class="header">
 				<img class="header--image" src="./img/gea/logo.jpg" alt="gea" />
 				<nav class="header--navigation">
-					<a class="header--navigation--li" href="#us">
+					<a class="header--navigation--li" href="#nosotros">
 						<span
 							class="hover-underline-animation header--navigation--li--text">
 							Nosotros
 						</span>
 					</a>
-					<a class="header--navigation--li" href="#services">
+					<a class="header--navigation--li" href="#capacitaciones">
 						<span
 							class="hover-underline-animation header--navigation--li--text">
 							Capacitaciones
 						</span>
 					</a>
-					<a class="header--navigation--li" href="#contact">
+					<a class="header--navigation--li" href="#contacto">
 						<span
 							class="hover-underline-animation header--navigation--li--text">
 							Contacto
@@ -50,19 +50,21 @@
 					<ul
 						id="header--mobile--nav--ul"
 						class="header--mobile--nav--ul">
-						<a class="header--navigation--li" href="#us">
+						<a class="header--navigation--li" href="#nosotros">
 							<span
 								class="hover-underline-animation header--navigation--li--text">
 								Nosotros
 							</span>
 						</a>
-						<a class="header--navigation--li" href="#services">
+						<a
+							class="header--navigation--li"
+							href="#capacitaciones">
 							<span
 								class="hover-underline-animation header--navigation--li--text">
 								Capacitaciones
 							</span>
 						</a>
-						<a class="header--navigation--li" href="#contact">
+						<a class="header--navigation--li" href="#contacto">
 							<span
 								class="hover-underline-animation header--navigation--li--text">
 								Contacto
@@ -73,7 +75,7 @@
 			</header>
 
 			<!-- HERO -->
-			<section class="hero--section">
+			<section id="nosotros" class="hero--section">
 				<div class="hero--section--info">
 					<!-- <h2 class="hero--section--info--title">G.E.A</h2> -->
 					<!-- <img
@@ -98,8 +100,10 @@
 					</p>
 
 					<div class="hero--section--info--action">
-						<a class="hero--section--info--action--link" href="#"
-							>Cursos</a
+						<a
+							class="hero--section--info--action--link"
+							href="#capacitaciones"
+							>Capacitaciones</a
 						>
 					</div>
 				</div>
@@ -138,7 +142,11 @@
 						pedagogico a profesionales que quieran incursionar en
 						docencia. ¡Convierte tus objetivos en realidad hoy
 						mismo!<span class="mision--section--text--link">
-							Contáctanos
+							<a
+								class="mision--section--text--link"
+								href="#contacto">
+								Contáctanos
+							</a>
 						</span>
 						si deseas obtener más información.
 					</p>
@@ -150,7 +158,7 @@
 			<!-- END MISION -->
 
 			<!-- SERVICES -->
-			<main class="services--section">
+			<main id="capacitaciones" class="services--section">
 				<h1 class="services--section--title">
 					Capacitaciones para docentes
 				</h1>
@@ -331,7 +339,7 @@
 			</main>
 			<!-- END SERVICES -->
 
-			<footer id="contact" class="footer">
+			<footer class="footer">
 				<div class="footer--info--container">
 					<p class="footer--info--text">
 						Contáctanos a través de WhatsApp, correo electrónico o
@@ -362,7 +370,7 @@
 							email@email.com2
 						</p>
 					</div>
-					<div class="footer--info--contact">
+					<div id="contacto" class="footer--info--contact">
 						<img
 							class="footer--info--contact--icon"
 							src="./img/assets/email.svg"
